syntax = "proto3";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";
option java_outer_classname = "ProjectProto";

service Password {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
	rpc RetrieveName (UsernameRequest) returns (UsernameReply);
	rpc HashPassword (PassRequest) returns (PassReply);
}

message UsernameRequest {
	string name = 1;
}

message UsernameReply {
	string message = 1;
}

// The request message containing the user's name.
message HelloRequest {
  	string name = 1;
}

// The response message containing the greetings
message HelloReply {
  	string message = 1;
}

message PassRequest {
  	string name = 1;
}

message PassReply {
  	string message = 1;
}
